pkg/ibmvpc/examples/out/explain_out/QueryConnectionSGSubsetPorts_all_vpcs_explain.txt
Connectivity explanation for protocol: TCP dst-ports: 10-30 between 147.235.219.206/32 and vsi2-ky[10.240.20.4]
Connection protocol: TCP dst-ports: 22 exists between Public Internet 147.235.219.206/32 and vsi2-ky[10.240.20.4]
External Router FloatingIP: floating-ip-ky
Ingres: security group sg2-ky allows connection (with allow rules)

Rules details:
~~~~~~~~~~~~~~
Ingress:
security group sg2-ky allows connection with the following allow rules
	index: 2, direction: inbound,  conns: protocol: tcp,  dstPorts: 22-22, cidr: 147.235.219.206/32
